# tahoma2d

./: .gitattributes  .gitignore  .travis.yml  AGENTS.md  ANIMATIC_TASKS.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  Tahoma2D.entitlements  Ztoryc.entitlements  appveyor.yml  build_and_deploy.sh  changes.patch  how_to_build_macosx.md  how_to_build_macosx_en.md  how_to_build_win.md  how_to_build_win_en.md  linux_build.sh  linux_depends.sh  tahoma_build.sh  updateVersion.sh
plugins/blur/: CMakeLists.txt  blur.cpp  pixelop.hpp
plugins/focaldistanceblur/: CMakeLists.txt  focal_distance_blur.cpp
plugins/geom/: CMakeLists.txt  geom.cpp
plugins/multiplugin/: CMakeLists.txt  multi.cpp
toonz/sources/: .clang-format  CMakeLists.txt  beautification.bat  beautification.sh
toonz/sources/colorfx/: CMakeLists.txt  colorfx.cpp  colorfxutils.cpp  colorfxutils.h  flowlinestrokestyle.cpp  flowlinestrokestyle.h  rasterstyles.cpp  rasterstyles.h  regionstyles.cpp  regionstyles.h  strokestyles.cpp  strokestyles.h  zigzagstyles.cpp  zigzagstyles.h
toonz/sources/common/: tcontenthistory.cpp  tgraphics.cpp  tio.cpp  tmsgcore.cpp  tproperty.cpp  tstepparam.h  tstringid.cpp  tvariant.cpp  tvectorrenderer.cpp  xscopedlock.cpp
toonz/sources/image/: CMakeLists.txt  tiio.cpp
toonz/sources/include/: avicodecrestrictions.h  cellposition.h  colorfx.h  convert2tlv.h  dllblacklist.h  drawutil.h  historytypes.h  macofflinegl.h  movsettings.h  orientation.h  permissionsmanager.h  qtofflinegl.h  saveloadqsettings.h  t32bitsrv_wrap.h  tatomicvar.h  tautoclose.h  tbasefx.h  tbezier.h  tbigmemorymanager.h  tbrush.h  tcachedlevel.h  tcacheresource.h  tcacheresourcepool.h  tcg_wrap.h  tcli.h  tcodec.h  tcolorfunctions.h  tcolorstyles.h  tcolorutils.h  tcolorvalue.h  tcolumnset.h  tcommon.h  tconst.h  tcontenthistory.h  tconvert.h  tcubicbezier.h  tcurves.h  tcurveutil.h  tdata.h  tdebugmessage.h  (+145 more)
toonz/sources/mousedragfilter/: CMakeLists.txt  mousedragfilter.h  mousedragfilter.mm
toonz/sources/scripts/: AppRun  AppRun_macos
toonz/sources/sound/: CMakeLists.txt  tsio.cpp  tsio.h  tsioutils.cpp  tsioutils.h
toonz/sources/stdfx/: CMakeLists.txt  adjustlevelsfx.cpp  artcontourfx.cpp  backlit.cpp  backlitfx.cpp  blendtzfx.cpp  blurfx.cpp  bodyhighlightfx.cpp  bright_contfx.cpp  bright_contfx.h  calligraphicfx.cpp  changecolorfx.cpp  changecolorfx.h  channelmixerfx.cpp  cloudsfx.cpp  colorembossfx.cpp  cornerpinfx.cpp  despecklefx.cpp  diamondgradientfx.cpp  dissolvefx.cpp  embossfx.cpp  erodilatefx.cpp  externalpalettefx.cpp  fourpointsgradientfx.cpp  freedistortfx.cpp  gammafx.cpp  globalcontrollablefx.h  glowfx.cpp  gradients.cpp  gradients.h  hsvkeyfx.cpp  hsvscalefx.cpp  hsvutil.cpp  hsvutil.h  igs_attenuation_distribution.cpp  igs_color_blend.cpp  igs_color_blend.h  igs_color_rgb_hls.cpp  igs_color_rgb_hls.h  igs_color_rgb_hsv.cpp  (+262 more)
toonz/sources/stopmotion/: canon.cpp  canon.h  gphotocam.cpp  gphotocam.h  increment.cpp  increment.h  incrementpanel.cpp  incrementpanel.h  jpgconverter.cpp  jpgconverter.h  stopmotion.cpp  stopmotion.h  stopmotioncontroller.cpp  stopmotioncontroller.h  stopmotionlight.cpp  stopmotionlight.h  stopmotionserial.cpp  stopmotionserial.h  webcam.cpp  webcam.h
toonz/sources/t32bitsrv/: CMakeLists.txt  main.cpp  t323gpmsg.cpp  t323gpmsg.h  t32fontmsg.cpp  t32fontmsg.h  t32movmsg.cpp  t32movmsg.h
toonz/sources/tcleanupper/: CMakeLists.txt  tcleanupper.cpp
toonz/sources/tcomposer/: CMakeLists.txt  stub.cpp  tcomposer.cpp  tests.cpp
toonz/sources/tconverter/: CMakeLists.txt  tconverter.cpp
toonz/sources/tnzbase/: CMakeLists.txt  permissionsmanager.cpp  stringtable.cpp  texternfx.cpp  tfxattributes.cpp  tfxutil.cpp  trasterfx.cpp
toonz/sources/tnzcore/: CMakeLists.txt
toonz/sources/tnzext/: CMakeLists.txt  CompositeStatus.cpp  ContextStatus.cpp  CornerDeformation.cpp  DeformationSelector.cpp  DeformationSelector.h  Designer.cpp  Doxyfile  DraggerStatus.cpp  ExtUtil.cpp  InterfaceStatus.cpp  LinearPotential.cpp  NotSimmetricBezierPotential.cpp  NotSimmetricExpPotential.cpp  NotSymmetricBezierPotential.cpp  NotSymmetricExpPotential.cpp  OverallDesigner.cpp  Potential.cpp  Readme.cpp  Selector.cpp  SelfLoopDeformation.cpp  SmoothDeformation.cpp  SquarePotential.cpp  StraightCornerDeformation.cpp  StrokeDeformation.cpp  StrokeDeformationAdapter.cpp  StrokeDeformationImpl.cpp  StrokeParametricDeformer.cpp  StrokeStatus.cpp  Types.cpp  meshbuilder.cpp  meshtexturizer.cpp  meshutils.cpp  plasticdeformer.cpp  plasticdeformerstorage.cpp  plastichandle.cpp  plasticskeleton.cpp  plasticskeletondeformation.cpp  ttexturesstorage.cpp
toonz/sources/tnztools/: CMakeLists.txt  autofill.h  autofillpli.cpp  autofilltlv.cpp  bendertool.cpp  bluredbrush.cpp  bluredbrush.h  brushtool.cpp  brushtool.h  cmrasterbrush.cpp  cmrasterbrush.h  controlpointeditortool.cpp  controlpointeditortool.h  controlpointselection.cpp  controlpointselection.h  cursormanager.cpp  cuttertool.cpp  edittool.cpp  edittool.h  edittoolgadgets.cpp  edittoolgadgets.h  filltool.cpp  filltool.h  fingertool.cpp  fullcolorbrushtool.cpp  fullcolorbrushtool.h  fullcolorerasertool.cpp  fullcolorfilltool.cpp  fullcolorfilltool.h  geometrictool.cpp  geometrictool.h  hookselection.cpp  hookselection.h  hooktool.cpp  imagegrouping.cpp  irontool.cpp  levelselection.cpp  magnettool.cpp  morphtool.cpp  morphtool.h  (+62 more)
toonz/sources/toonz/: CMakeLists.txt  ObjectTracker.cpp  ObjectTracker.h  Tahoma.icns  Ztoryc.icns  aboutpopup.cpp  aboutpopup.h  actioncommand.h  addfilmstripframespopup.cpp  addfilmstripframespopup.h  adjustlevelspopup.cpp  adjustlevelspopup.h  adjustthicknesspopup.cpp  adjustthicknesspopup.h  alignmentpane.cpp  alignmentpane.h  antialiaspopup.cpp  antialiaspopup.h  audiorecordingpopup.cpp  audiorecordingpopup.h  autoinputcellnumberpopup.cpp  autoinputcellnumberpopup.h  batches.cpp  batches.h  batchserversviewer.cpp  batchserversviewer.h  binarizepopup.cpp  binarizepopup.h  boardsettingspopup.cpp  boardsettingspopup.h  bravomark.h  brightnessandcontrastpopup.cpp  (+415 more)
(+2263 files in other folders)
